tests/language_modules/13_contract_blocks/valid/result_value_ensures.vf
module ResultValueEnsures

error NotFound

function load() returns Result<Integer, NotFound>
ensures value >= 0
ensures error = NotFound or success
is
    return ok 1
end load

end ResultValueEnsures