tests/language_modules/13_contract_blocks/invalid_semantics/result_value_contract_type_mismatch.vf
module ResultValueContractTypeMismatch

error NotFound

function load() returns Result<Integer, NotFound>
ensures value = true
is
    return ok 1
end load

end ResultValueContractTypeMismatch